public/app.css
body {
  font-family: 'Nixie One', sans-serif;
  margin: 0 auto;
  font-size: 18px;
  color: #FAFAFA;
  font-weight: bold;
}

.navbar {
  padding-top: 8px;
  padding-bottom: 5px;
  border-bottom: 1px solid #BDBDBD;
  font-size: 16px;
  color: #FAFAFA;
}

.nav-link {
  color: #FAFAFA;
}

.flash {
  text-align: center;
  margin-top: 10px;
  margin-bottom: 10px;
  padding-top: 3px;
  padding-bottom: 15px;
  border-bottom: 1px solid #BDBDBD;
}

.splash {
  position: absolute;
  min-height: 100%;
  min-width: 100%;
  text-align: center;
  background: url('carrots-2.jpg') no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  color: #FAFAFA;
  font-family: 'Homemade Apple', cursive;
}

#splash-header {
  font-size: 65px;
  margin-top: 20%;
}

#splash-login {
  display: inline-block;
  font-size: 35px;
  margin: 20px;
  padding-top: 5px;
  padding: 10px;
  border-top: solid 3px #FAFAFA;
  border-bottom: solid 3px #FAFAFA;

}

#splash-signup {
  display: inline-block;
  font-size: 35px;
  margin: 20px;
  padding: 10px;
  padding-top: 10px;
  border-top: solid 3px #FAFAFA;
  border-bottom: solid 3px #FAFAFA;
}

.background {
  position: absolute;
  min-height: 100%;
  min-width: 100%;
  text-align: center;
  background: url('wood.jpg') repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  background-repeat: repeat-y;
  color: #FAFAFA;
}

.content {
  width: 75%;
  margin: 0 auto;
  padding: 10px;
}

.content-background {
  position: absolute;
  width: 75%;
  margin: 0 auto;
  height: 97%;
  background-color: #454545;
  z-index: 1;
   These three lines are for transparency in all browsers. 
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
  filter: alpha(opacity=50);
  opacity: .5;
}

.content-content {
  position: relative;
  z-index: 5;
  padding: 0 20px 20px;
}

a {
  color: #FAFAFA;
}

a:visited {
  color: #FAFAFA;
}

#header {
  font-family: 'Homemade Apple', cursive;
  text-align: center;
  padding-bottom: 18px;
  padding-top: 15px;
}

.navbar {
  padding: 5px;
}

.about {
  text-align: left;
}

.about>p {
  margin-top: 25px;
}

#email {
  width: 65%;
  display: inline-block;
  margin-left: 10px;
}

#password {
  width: 55%;
  display: inline-block;
  margin-left: 10px;
}

#password_confirmation {
  width: 45%;
  display: inline-block;
  margin-left: 10px;
}

th {
  font-family: 'Homemade Apple', cursive;
  font-size: 22px;
  text-align: center;
}

.table>tbody>tr>th {
  padding-top: 17px;
}

.table>tbody>tr>td.td-not-button {
  font-size: 18px;
  padding-top: 13px;
}

.quantity {
  text-align: center;
}

.exp-date {
  text-align: center;
}

.portion-size {
  text-align: center;
}

.loading-message {
  text-align: center;
  font-size: 24pt;
}

.pantry {
  margin: 0 auto;
}

.pantryitem {
  margin-top: 5px;
  margin-bottom: 5px;
  width: 75%;
  text-align: center;
  margin: 0 auto;
}

.form-holder {
  width: 75%;
  margin: 0 auto;
  font-size: 20px;
  font-weight: bold;
  text-align: left;
}

.form-note {
  display: inline-block;
  font-size: 14px;
  margin-left: 10px;
}

#name {
  width: 65%;
  display: inline-block;
  margin-left: 10px;
}

#quantity {
  width: 12%;
  display: inline-block;
}

#time-to-exp {
  margin-left: 10px;
  width: 20%;
  display: inline-block;
}

#exp-unit {
  margin-left: 10px;
  width: 20%;
  display: inline-block;
}

.description-show {
  font-size: 24px;
  margin-bottom: 20px;
}

.ingredients-show {
  margin-top: 20px;
  font-size: 26px;
  font-weight: bold;
}

.show-pantry {
  margin-top: 25px;
}

.sm-button {
  margin-top: 25px;
  margin-right: 10px;
  height: 40px;
  font-size: 18px;
}

.big-button {
  margin-top: 20px;
  width: 75%;
  height: 10%;
  padding: 10px;
  font-size: 24px;
}

.consume {
  margin-left: 30%;
}

.bulk-add-btn {
  margin-right: 40%;
}

.bulk-add-btn-alone {

}

.bulk-quant-submit {
  margin-left: 8px;
}

.bulk-quant-form {
  margin-top: 20px;
}

.account-info {
  text-align: left;
  font-size: 22px;
  width: 65%;
  margin: 0 auto;
}

.account-info>div {
  margin: 5px;
}

.edit-account {
  margin-top: 15px;
}

#exp_notif {
  width: 15%;
}

#exp_soon_quant {
  display: inline-block;
  width: 15%;
}

#exp_soon_units {
  margin-left: 10px;
  width: 20%;
  display: inline-block;
}

footer {
  text-align: center;
  font-size: 14px;
}

